# backend/api-gateway-go/swagger/panda-gateway.yaml
@@ -60,7 +60,7 @@ paths:
     post:
       summary: Authentication of the user
       description: Authenticate user by username and password and return JWT (json web token)
-      operationId: authenticateByUsernameAndPassword
+      operationId: AuthenticateByUsernameAndPassword
       tags:
         - Security
       requestBody:
@@ -72,18 +72,18 @@ paths:
         "500":
           description: General server error
         "401":
-          description: Authentication failed
+          description: Unauthorized
         "200":
           description: Successfully authenticated. Returns JWT.
           content:
             application/json:
               schema:
                 $ref: "#/components/schemas/AccessToken"
-  /reauthenticate:
+  /refresh-token:
     post:
       summary: Reauthentication of the user
       description: Reauthentication because of the token expiration. Authenticate user by JWT (json web token) presented in the Authorization header and if the JWT is still ok create and returns new JWT.
-      operationId: reauthenticateUser
+      operationId: RefreshToken
       security:
         - jwtAuth: []
       tags:
@@ -92,7 +92,7 @@ paths:
         "500":
           description: General server error
         "401":
-          description: Authentication failed
+          description: Unauthorized
         "200":
           description: Successfully reauthenticated. Returns new JWT.
           content:
@@ -103,7 +103,7 @@ paths:
     get:
       summary: Get user info by JWT presented in header
       description: Get user info by JWT (json we token) presented in Authorization header in the request
-      operationId: getUserByJWT
+      operationId: GetUserByJWT
       security:
         - jwtAuth: []
       tags:
